fix: Align footer on the bottom of the page

--- a/style.css
+++ b/style.css
@@ -67,12 +67,22 @@ img{
     font-size: 0.9rem;
     margin-bottom: 1.5rem;
 }
+a{
+    text-decoration: none;
+    color:white;
 
+}
 .attribution { 
     font-size: 11px; 
     text-align: center;
+    background-color:hsl(0, 0%, 20%);
+    width: 100%;
 }
 .attribution a {
-     color: hsl(228, 45%, 44%); 
+     color: hsl(75, 94%, 57%); 
 }
-
+.flex-box {
+    flex:1;
+    display: flex;
+    align-items: center;
+}
